Get rid of direct Unsafe invocation, in case of compile warnings